# fastapi-zitadel-auth

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TESTING_MIGRATION_SUMMARY.md  auth.py  example_usage.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  settings.py  test_utils.py  user_example.py
.github/workflows/: codeql.yml  coverage.yml  docs.yml  publish.yml  test.yml
demo_project/: .env.example  README.md  custom_models.py  dependencies.py  main.py  server.py  service_user.py  settings.py  tests.py
docs/: CONTRIBUTING.md  ZITADEL_SETUP.md  contributing.md  custom_claims_and_users.md  demo-project.md  fastapi-configuration.md  features-and-bugfixes.md  testing-utilities.md  writing-documentation.md  zitadel-setup.md  zitadel_setup.md
src/: auth.py  main.py  service_user.py  settings.py
src/fastapi_zitadel_auth/: __init__.py  auth.py  config.py  jwks.py  models.py  openid_config.py  token.py  user.py
src/fastapi_zitadel_auth/testing/: __init__.py  fixtures.py  utils.py
tests/: .env.test  conftest.py  test_auth.py  test_custom_models.py  test_init_validation.py  test_models.py  test_openapi_scheme.py  test_openid_config.py  test_provider.py  test_public.py  test_testing_fixtures.py  test_token.py  test_token_validator.py  test_user.py  utils.py
