[project]
name = "fastapi-zitadel-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.0",
    "cryptography>=43.0.3",
    "fastapi>=0.115.4",
    "httpx>=0.27.2",
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.9.0",
    "ruff>=0.7.3",
    "uvicorn>=0.32.0",
]
