[project]
name = "fastapi-zitadel-auth"
version = "0.1.0"  # change in src/fastapi_zitadel_auth/__init__.py as well
description = "Zitadel authentication for FastAPI"
readme = "README.md"
authors = [
    { name = "Clean Energy Exchange", email = "info@ceex.ch" }
]
homepage = "https://github.com/cleanenergyexchange/fastapi-zitadel-auth"
repository = "https://github.com/cleanenergyexchange/fastapi-zitadel-auth"
documentation = "https://github.com/cleanenergyexchange/fastapi-zitadel-auth"
keywords = [
    "async",
    "asyncio",
    "fastapi",
    "zitadel",
    "authentication",
    "oauth",
    "oidc",
]
requires-python = ">=3.10"
dependencies = [
    "cachetools>=5.5.0",
    "cryptography>=43.0.3",
    "fastapi>=0.115.4",
    "httpx>=0.27.2",
    "pyjwt>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pydantic-settings>=2.6.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "uvicorn>=0.32.1",
]
